--- a/QuantumTechnicianApp/Src/App.fx.yaml
+++ b/QuantumTechnicianApp/Src/App.fx.yaml
@@ -124,7 +124,7 @@ App As appinfo:
              {
                 Title: "Step-by-Step" &  Char(10) & "Instructions",
                 icon: Icon.DetailList,
-                Navigate: FAQScreen_1
+                Navigate: InstructionsScreen
             },
             {
                 Title: "FAQ",
