--- a/QuantumTechnicianApp/Src/InstructionsScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/InstructionsScreen.fx.yaml
@@ -3,7 +3,7 @@ InstructionsScreen As screen:
         =ClearCollect(
             GCInstructions,
             {Step: "1. Install PowerApps via Schindler App Catalog and/or Apple App Store."},
-            {Step: "2. Open Technician App from App list (check name of the App in Email communication). "},
+            {Step: "2. Open PowerApps and search for the app name in the search bar (the app name will be communicated through email) and click on the info icon beside the app name, then click on the favorite icon. Now the app will be in the favorites. "},
             {Step: "3. While Technician App is opening, we are authenticating, logged In user's email is present in Technician's master table or not. If not, we give popup to user's ""You are not authorized to use this app. Kindly contact support team."" "},
             {Step: "4. User can see Dashboard with Tabs Open Leads, In Progress Leads, Rejected Leads, Quoted Leads, Sold Leads and Create New Lead button."},
             {Step: "5. Once user clicks on ""Create New Lead"" button user will see 5 steps form."},
