--- a/QuantumTechnicianApp/CanvasManifest.json
+++ b/QuantumTechnicianApp/CanvasManifest.json
@@ -148,6 +148,7 @@
     "AboutScreen",
     "SupportScreen",
     "FAQScreen",
-    "InstructionsScreen"
+    "InstructionsScreen",
+    "AppProcessFlowScreen"
   ]
 }
