--- a/QuantumTechnicianApp/Src/AppProcessFlowScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/AppProcessFlowScreen.fx.yaml
@@ -157,7 +157,7 @@ AppProcessFlowScreen As screen:
                 Height: =Parent.Height
                 PaddingLeft: =20
                 Size: =AllScreensCSS.RfontsizeInput
-                Text: ="Step-by-Step Instructions"
+                Text: ="App Process Flow"
                 Width: =Parent.Width
                 ZIndex: =1
 
@@ -254,7 +254,7 @@ AppProcessFlowScreen As screen:
                     Size: =If(Parent.Width<500,10,12)
                     Text: =ThisItem.Title
                     Width: =Parent.Width-iconMenuCS_5.Width-lineIndicatorCS_5.Width
-                    X: =iconMenuCS_5.Width+iconMenuCS_5.X+10
+                    X: =36.6797385620915
                     Y: =25
                     ZIndex: =1
 
