--- a/QuantumTechnicianApp/Src/SupportScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SupportScreen.fx.yaml
@@ -157,70 +157,118 @@ SupportScreen As screen:
             Y: =180
             ZIndex: =3
 
-            btnContactSS As button:
-                Color: =RGBA(0, 0, 0, 1)
-                DisabledColor: =RGBA(0, 0, 0, 1)
-                DisplayMode: =DisplayMode.View
-                Fill: =RGBA(219, 219, 219, 1)
-                Font: =Font.Arial
-                Height: =50
-                HoverColor: =RGBA(0, 0, 0, 1)
-                HoverFill: =Self.Fill
-                PressedColor: =Self.Color
-                PressedFill: =Self.Fill
-                Size: =If(Parent.Width>800,20,Parent.Width<358,14,Parent.Width>358,16)
-                Text: ="Contact "
-                Width: =Parent.Width-20
-                X: =10
-                Y: =10
-                ZIndex: =4
+            Container2 As groupContainer.verticalAutoLayoutContainer:
+                Fill: =RGBA(255, 255, 255, 1)
+                Height: =Parent.Height
+                LayoutAlignItems: =LayoutAlignItems.Stretch
+                LayoutDirection: =LayoutDirection.Vertical
+                LayoutGap: =5
+                LayoutMode: =LayoutMode.Auto
+                LayoutOverflowY: =LayoutOverflow.Scroll
+                PaddingBottom: =10
+                PaddingLeft: =10
+                PaddingRight: =10
+                PaddingTop: =10
+                Width: =Parent.Width
+                ZIndex: =10
 
-            lblContactySS As label:
-                Fill: =RGBA(237, 237, 237, 1)
-                FocusedBorderThickness: =5
-                Font: =Font.Arial
-                Height: =80
-                Size: =If(Parent.Width>800,20,Parent.Width<358,12,Parent.Width>358,14)
-                Text: |-
-                    =" Leads and incentives related contact :  "
-                VerticalAlign: =VerticalAlign.Top
-                Width: =Parent.Width-20
-                X: =10
-                Y: =btnContactSS.Height+btnContactSS.Y+10
-                ZIndex: =5
+                btnContactSS_1 As button:
+                    Color: =RGBA(0, 0, 0, 1)
+                    DisabledColor: =RGBA(0, 0, 0, 1)
+                    DisplayMode: =DisplayMode.View
+                    Fill: =RGBA(219, 219, 219, 1)
+                    Font: =Font.Arial
+                    Height: =50
+                    HoverColor: =RGBA(0, 0, 0, 1)
+                    HoverFill: =Self.Fill
+                    PressedColor: =Self.Color
+                    PressedFill: =Self.Fill
+                    Size: =If(Parent.Width>800,20,Parent.Width<358,14,Parent.Width>358,16)
+                    Text: ="Log-in/Access Issues"
+                    Width: =Parent.Width-20
+                    X: =10
+                    Y: =10
+                    ZIndex: =1
 
-            btnSupportSS As button:
-                Color: =RGBA(0, 0, 0, 1)
-                DisabledColor: =RGBA(0, 0, 0, 1)
-                DisplayMode: =DisplayMode.View
-                Fill: =RGBA(219, 219, 219, 1)
-                Font: =Font.Arial
-                Height: =50
-                HoverColor: =RGBA(0, 0, 0, 1)
-                HoverFill: =Self.Fill
-                PressedColor: =Self.Color
-                PressedFill: =Self.Fill
-                Size: =If(Parent.Width>800,20,Parent.Width<358,14,Parent.Width>358,16)
-                Text: ="Technical Support "
-                Width: =Parent.Width-20
-                X: =10
-                Y: =lblContactySS.Y+lblContactySS.Height+10
-                ZIndex: =6
+                lblContactySS_1 As label:
+                    Fill: =RGBA(237, 237, 237, 1)
+                    FocusedBorderThickness: =5
+                    Font: =Font.Arial
+                    Height: =80
+                    Size: =If(Parent.Width>800,20,Parent.Width<358,12,Parent.Width>358,14)
+                    Text: |-
+                        ="If you have issues with downloading or logging in to PowerApps,
+                        please contact the SIS Service Desk at 1-800-859-4028."
+                    VerticalAlign: =VerticalAlign.Top
+                    Width: =Parent.Width-20
+                    X: =10
+                    Y: =btnContactSS_1.Height+btnContactSS_1.Y+10
+                    ZIndex: =2
 
-            lblSupportSS As label:
-                Align: =Align.Justify
-                Fill: =RGBA(237, 237, 237, 1)
-                FocusedBorderThickness: =5
-                Font: =Font.Arial
-                Height: =Parent.Height-btnContactSS.Height-lblContactySS.Height-btnSupportSS.Height-50
-                Size: =If(Parent.Width>800,20,Parent.Width<358,12,Parent.Width>358,14)
-                Text: |-
-                    ="Email support : "& Char(10) & "between 9 AM to 1 PM" & Char(10) &"on Monday to Friday  "
-                VerticalAlign: =VerticalAlign.Top
-                Width: =Parent.Width-20
-                X: =10
-                Y: =btnSupportSS.Height+btnSupportSS.Y+10
-                ZIndex: =7
+                btnSupportSS_2 As button:
+                    Color: =RGBA(0, 0, 0, 1)
+                    DisabledColor: =RGBA(0, 0, 0, 1)
+                    DisplayMode: =DisplayMode.View
+                    Fill: =RGBA(219, 219, 219, 1)
+                    Font: =Font.Arial
+                    Height: =50
+                    HoverColor: =RGBA(0, 0, 0, 1)
+                    HoverFill: =Self.Fill
+                    PressedColor: =Self.Color
+                    PressedFill: =Self.Fill
+                    Size: =If(Parent.Width>800,20,Parent.Width<358,14,Parent.Width>358,16)
+                    Text: ="App Functionality"
+                    Width: =Parent.Width-20
+                    X: =10
+                    Y: =lblContactySS_1.Y+lblContactySS_1.Height+10
+                    ZIndex: =3
+
+                lblSupportSS_2 As label:
+                    Align: =Align.Justify
+                    Fill: =RGBA(237, 237, 237, 1)
+                    FocusedBorderThickness: =5
+                    Font: =Font.Arial
+                    Height: =200
+                    Size: =If(Parent.Width>800,20,Parent.Width<358,12,Parent.Width>358,14)
+                    Text: ="should you experience any issues while using the App or submitting a lead, specialized tech support is also available between 9AM-1PM EST on Mondays,Wednesdays and Fridays." & Char(10) & "Please email kishan.mahajan@quantumintegrators.com.If additional assistance is needed, please contact 1-800-123-4567 during the above support hours "
+                    VerticalAlign: =VerticalAlign.Top
+                    Width: =Parent.Width-20
+                    X: =10
+                    Y: =btnSupportSS_2.Height+btnSupportSS_2.Y+10
+                    ZIndex: =4
+
+                btnSupportSS_3 As button:
+                    Color: =RGBA(0, 0, 0, 1)
+                    DisabledColor: =RGBA(0, 0, 0, 1)
+                    DisplayMode: =DisplayMode.View
+                    Fill: =RGBA(219, 219, 219, 1)
+                    Font: =Font.Arial
+                    Height: =50
+                    HoverColor: =RGBA(0, 0, 0, 1)
+                    HoverFill: =Self.Fill
+                    PressedColor: =Self.Color
+                    PressedFill: =Self.Fill
+                    Size: =If(Parent.Width>800,20,Parent.Width<358,14,Parent.Width>358,16)
+                    Text: ="Leads/Incentives"
+                    Width: =Parent.Width-20
+                    X: =10
+                    Y: =lblSupportSS_2.Y+lblSupportSS_2.Height+10
+                    ZIndex: =5
+
+                lblSupportSS_3 As label:
+                    Align: =Align.Justify
+                    AutoHeight: =true
+                    Fill: =RGBA(237, 237, 237, 1)
+                    FocusedBorderThickness: =5
+                    Font: =Font.Arial
+                    Height: =ctnMiddleCS_3.Height-btnContactSS_1.Height-lblContactySS_1.Height-btnSupportSS_3.Height-lblSupportSS_2.Height-btnSupportSS_2.Height-20
+                    Size: =If(Parent.Width>800,20,Parent.Width<358,12,Parent.Width>358,14)
+                    Text: ="if you have any questions or concerns regarding a submitted lead or incentive, please contact Connie Nason at (973) 534-4291 /constance.nason@schindler.com or Melanie Lee at (332) 207-1866 /melanie.lee@schindler.com "
+                    VerticalAlign: =VerticalAlign.Top
+                    Width: =Parent.Width-20
+                    X: =10
+                    Y: =btnSupportSS_3.Height+btnSupportSS_3.Y+10
+                    ZIndex: =6
 
     grpMenuCS_3 As group:
         Height: =5
