--- a/QuantumTechnicianApp/Src/SupportScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SupportScreen.fx.yaml
@@ -173,6 +173,8 @@ SupportScreen As screen:
                 ZIndex: =10
 
                 btnContactSS_1 As button:
+                    Align: =Align.Left
+                    AlignInContainer: =AlignInContainer.Center
                     Color: =RGBA(0, 0, 0, 1)
                     DisabledColor: =RGBA(0, 0, 0, 1)
                     DisplayMode: =DisplayMode.View
@@ -191,6 +193,8 @@ SupportScreen As screen:
                     ZIndex: =1
 
                 lblContactySS_1 As label:
+                    Align: =Align.Justify
+                    AutoHeight: =true
                     Fill: =RGBA(255, 255, 255, 1)
                     FocusedBorderThickness: =5
                     Font: =Font.Arial
@@ -206,6 +210,7 @@ SupportScreen As screen:
                     ZIndex: =2
 
                 btnSupportSS_2 As button:
+                    Align: =Align.Left
                     Color: =RGBA(0, 0, 0, 1)
                     DisabledColor: =RGBA(0, 0, 0, 1)
                     DisplayMode: =DisplayMode.View
@@ -224,13 +229,15 @@ SupportScreen As screen:
                     ZIndex: =3
 
                 lblSupportSS_2 As label:
-                    Align: =Align.Justify
+                    AutoHeight: =true
                     Fill: =RGBA(255, 255, 255, 1)
                     FocusedBorderThickness: =5
                     Font: =Font.Arial
                     Height: =200
                     Size: =If(Parent.Width>800,20,Parent.Width<358,12,Parent.Width>358,14)
-                    Text: ="should you experience any issues while using the App or submitting a lead, specialized tech support is also available between 9AM-1PM EST on Mondays,Wednesdays and Fridays." & Char(10) & "Please email kishan.mahajan@quantumintegrators.com.If additional assistance is needed, please contact 1-800-123-4567 during the above support hours "
+                    Text: |-
+                        ="should you experience any issues while using the App or submitting a lead, specialized tech support is also available between 9AM-1PM EST on Mondays,Wednesdays and Fridays."
+                         & Char(10) & "Please email kishan.mahajan@quantumintegrators.com.If additional assistance is needed,please contact 1-800-123-4567 during the above support hours "
                     VerticalAlign: =VerticalAlign.Top
                     Width: =Parent.Width-20
                     X: =10
@@ -238,6 +245,7 @@ SupportScreen As screen:
                     ZIndex: =4
 
                 btnSupportSS_3 As button:
+                    Align: =Align.Left
                     Color: =RGBA(0, 0, 0, 1)
                     DisabledColor: =RGBA(0, 0, 0, 1)
                     DisplayMode: =DisplayMode.View
@@ -256,12 +264,13 @@ SupportScreen As screen:
                     ZIndex: =5
 
                 lblSupportSS_3 As label:
-                    Align: =Align.Justify
                     AutoHeight: =true
                     Fill: =RGBA(255, 255, 255, 1)
                     FocusedBorderThickness: =5
                     Font: =Font.Arial
-                    Height: =ctnMiddleCS_3.Height-btnContactSS_1.Height-lblContactySS_1.Height-btnSupportSS_3.Height-lblSupportSS_2.Height-btnSupportSS_2.Height-20
+                    Height: |-
+                        =//ctnMiddleCS_3.Height-btnContactSS_1.Height-lblContactySS_1.Height-btnSupportSS_3.Height-lblSupportSS_2.Height-btnSupportSS_2.Height
+                        200
                     Size: =If(Parent.Width>800,20,Parent.Width<358,12,Parent.Width>358,14)
                     Text: ="if you have any questions or concerns regarding a submitted lead or incentive, please contact Connie Nason at (973) 534-4291 /constance.nason@schindler.com or Melanie Lee at (332) 207-1866 /melanie.lee@schindler.com "
                     VerticalAlign: =VerticalAlign.Top
