--- a/QuantumTechnicianApp/Src/AboutScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/AboutScreen.fx.yaml
@@ -160,7 +160,8 @@ AboutScreen As screen:
 
             Label4 As label:
                 Align: =Align.Justify
-                Fill: =RGBA(237, 237, 237, 1)
+                Color: =RGBA(169, 169, 169, 1)
+                Fill: =RGBA(255, 255, 255, 1)
                 Font: =Font.Arial
                 Height: =Parent.Height-20
                 PaddingLeft: =10
