--- a/QuantumTechnicianApp/Src/SupportScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SupportScreen.fx.yaml
@@ -195,6 +195,7 @@ SupportScreen As screen:
                 lblContactySS_1 As label:
                     Align: =Align.Justify
                     AutoHeight: =true
+                    Color: =RGBA(169, 169, 169, 1)
                     Fill: =RGBA(255, 255, 255, 1)
                     FocusedBorderThickness: =5
                     Font: =Font.Arial
@@ -230,6 +231,7 @@ SupportScreen As screen:
 
                 lblSupportSS_2 As label:
                     AutoHeight: =true
+                    Color: =RGBA(169, 169, 169, 1)
                     Fill: =RGBA(255, 255, 255, 1)
                     FocusedBorderThickness: =5
                     Font: =Font.Arial
@@ -265,6 +267,7 @@ SupportScreen As screen:
 
                 lblSupportSS_3 As label:
                     AutoHeight: =true
+                    Color: =RGBA(169, 169, 169, 1)
                     Fill: =RGBA(255, 255, 255, 1)
                     FocusedBorderThickness: =5
                     Font: =Font.Arial
