--- a/QuantumTechnicianApp/Src/AppProcessFlowScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/AppProcessFlowScreen.fx.yaml
@@ -16,7 +16,7 @@ AppProcessFlowScreen As screen:
             {Step: "7. The QQ team can view all Open Leads in their Dashboard, with the apply to filter based on SEC district. A notification will be sent to the Technician’s device indicating a change in lead status has taken place."},
             {Step:"8. After a Lead has changed status from Open to In Progress, Technician can chat with their QQ Rep by clicking on the Chat icon displayed beside the corresponding Lead. Please message the Quick Quote team via the chat feature of the Lead Details to modify any incorrect information for the estimate"},
             {Step: "9. QQ Team assigns the CADRE estimate number to each Open Lead once generated."},
-            {Step10: "10.Lead incentive is calculated daily based on the FP Estimate file automatically imported from CADRE. A notification is sent to corresponding Technician when status of the lead is changed to Quoted or Sold Lead."}
+            {Step: "10. Lead incentive is calculated daily based on the FP Estimate file automatically imported from CADRE. A notification is sent to corresponding Technician when status of the lead is changed to Quoted or Sold Lead."}
         );
 
     ctnMainCS_5 As groupContainer.verticalAutoLayoutContainer:
