--- a/QuantumTechnicianApp/Src/App.fx.yaml
+++ b/QuantumTechnicianApp/Src/App.fx.yaml
@@ -128,7 +128,7 @@ App As appinfo:
             },
             {
                 Title: "App Process Flow",
-                icon: Icon.DetailList,
+                icon: Icon.ListScrollWatchlist,
                 Navigate: AppProcessFlowScreen
             },
             {
