--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -341,6 +341,7 @@ DashboardScreen As screen:
                         lblOpenLeadsCountDS As label:
                             Align: =Align.Center
                             Color: =If(CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Submitted"))=0,Dashboard.DButtonColor,AllScreensCSS.RColorBlack)
+                            DisabledColor: =Dashboard.DButtonColor
                             DisplayMode: =DisplayMode.View
                             Font: =AllScreensCSS.RFont
                             FontWeight: =FontWeight.Bold
@@ -366,6 +367,7 @@ DashboardScreen As screen:
                             Align: =Align.Center
                             AutoHeight: =true
                             Color: =If(CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Submitted"))=0,Dashboard.DButtonColor,AllScreensCSS.RColorBlack)
+                            DisabledColor: =Dashboard.DButtonColor
                             DisplayMode: =DisplayMode.View
                             Font: =AllScreensCSS.RFont
                             FontWeight: =FontWeight.Bold
@@ -388,6 +390,7 @@ DashboardScreen As screen:
                             Align: =Align.Center
                             AutoHeight: =true
                             Color: =If(CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Submitted"))=0,Dashboard.DButtonColor,AllScreensCSS.RColorBlack)
+                            DisabledColor: =Dashboard.DButtonColor
                             DisplayMode: =DisplayMode.View
                             Font: =AllScreensCSS.RFont
                             FontWeight: =FontWeight.Bold
@@ -469,6 +472,7 @@ DashboardScreen As screen:
                         lblInprogressLeadsCountDS As label:
                             Align: =Align.Center
                             Color: =If(CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="InProgress"))=0,Dashboard.DButtonColor,AllScreensCSS.RColorBlack)
+                            DisabledColor: =Dashboard.DButtonColor
                             DisplayMode: =DisplayMode.View
                             Font: =AllScreensCSS.RFont
                             FontWeight: =FontWeight.Bold
@@ -494,6 +498,7 @@ DashboardScreen As screen:
                             Align: =Align.Center
                             AutoHeight: =true
                             Color: =If(CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="InProgress"))=0,Dashboard.DButtonColor,AllScreensCSS.RColorBlack)
+                            DisabledColor: =Dashboard.DButtonColor
                             DisplayMode: =DisplayMode.View
                             Font: =AllScreensCSS.RFont
                             FontWeight: =FontWeight.Bold
@@ -516,6 +521,7 @@ DashboardScreen As screen:
                             Align: =Align.Center
                             AutoHeight: =true
                             Color: =If(CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="InProgress"))=0,Dashboard.DButtonColor,AllScreensCSS.RColorBlack)
+                            DisabledColor: =Dashboard.DButtonColor
                             DisplayMode: =DisplayMode.View
                             Font: =AllScreensCSS.RFont
                             FontWeight: =FontWeight.Bold
@@ -596,6 +602,7 @@ DashboardScreen As screen:
                         lblLeadsCountDS As label:
                             Align: =Align.Center
                             Color: =If(CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Rejected"))=0,Dashboard.DButtonColor,AllScreensCSS.RColorBlack)
+                            DisabledColor: =Dashboard.DButtonColor
                             DisplayMode: =DisplayMode.View
                             Font: =AllScreensCSS.RFont
                             FontWeight: =FontWeight.Bold
@@ -622,6 +629,7 @@ DashboardScreen As screen:
                             Align: =Align.Center
                             AutoHeight: =true
                             Color: =If(CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Rejected"))=0,Dashboard.DButtonColor,AllScreensCSS.RColorBlack)
+                            DisabledColor: =Dashboard.DButtonColor
                             DisplayMode: =DisplayMode.View
                             Font: =AllScreensCSS.RFont
                             FontWeight: =FontWeight.Bold
@@ -644,6 +652,7 @@ DashboardScreen As screen:
                             Align: =Align.Center
                             AutoHeight: =true
                             Color: =If(CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Rejected"))=0,Dashboard.DButtonColor,AllScreensCSS.RColorBlack)
+                            DisabledColor: =Dashboard.DButtonColor
                             DisplayMode: =DisplayMode.View
                             Font: =AllScreensCSS.RFont
                             FontWeight: =FontWeight.Bold
@@ -730,7 +739,7 @@ DashboardScreen As screen:
                             Align: =Align.Center
                             AutoHeight: =true
                             Color: =If(btnQuotedLeadsDS.DisplayMode=DisplayMode.Disabled,Dashboard.DButtonColor,AllScreensCSS.RColorBlack)
-                            DisabledColor: =RGBA(0, 0, 0, 1)
+                            DisabledColor: =Dashboard.DButtonColor
                             DisplayMode: =DisplayMode.View
                             Font: =AllScreensCSS.RFont
                             FontWeight: =FontWeight.Bold
@@ -757,7 +766,7 @@ DashboardScreen As screen:
                         lblQuotedLeadsDS As label:
                             Align: =Align.Center
                             Color: =If(btnQuotedLeadsDS.DisplayMode=DisplayMode.Disabled,Dashboard.DButtonColor,AllScreensCSS.RColorBlack)
-                            DisabledColor: =RGBA(0, 0, 0, 1)
+                            DisabledColor: =Dashboard.DButtonColor
                             DisplayMode: =DisplayMode.View
                             Font: =AllScreensCSS.RFont
                             FontWeight: =FontWeight.Bold
@@ -784,7 +793,7 @@ DashboardScreen As screen:
                             Align: =Align.Center
                             AutoHeight: =true
                             Color: =If(btnQuotedLeadsDS.DisplayMode=DisplayMode.Disabled,Dashboard.DButtonColor,AllScreensCSS.RColorBlack)
-                            DisabledColor: =RGBA(0, 0, 0, 1)
+                            DisabledColor: =Dashboard.DButtonColor
                             DisplayMode: =DisplayMode.View
                             Font: =AllScreensCSS.RFont
                             FontWeight: =FontWeight.Bold
@@ -886,7 +895,7 @@ DashboardScreen As screen:
                             Align: =Align.Center
                             AutoHeight: =true
                             Color: =If(btnSoldLeadsDS.DisplayMode=DisplayMode.Disabled,Dashboard.DButtonColor,AllScreensCSS.RColorBlack)
-                            DisabledColor: =RGBA(0, 0, 0, 1)
+                            DisabledColor: =Dashboard.DButtonColor
                             DisplayMode: =If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No'))=0,DisplayMode.Disabled,DisplayMode.Edit)
                             Font: =AllScreensCSS.RFont
                             FontWeight: =FontWeight.Bold
@@ -924,7 +933,7 @@ DashboardScreen As screen:
                         lblSoldLeadsCountDS As label:
                             Align: =Align.Center
                             Color: =If(btnSoldLeadsDS.DisplayMode=DisplayMode.Disabled,Dashboard.DButtonColor,AllScreensCSS.RColorBlack)
-                            DisabledColor: =RGBA(0, 0, 0, 1)
+                            DisabledColor: =Dashboard.DButtonColor
                             DisplayMode: =If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No'))=0,DisplayMode.Disabled,DisplayMode.Edit)
                             Font: =AllScreensCSS.RFont
                             FontWeight: =FontWeight.Bold
@@ -952,7 +961,7 @@ DashboardScreen As screen:
                             Align: =Align.Center
                             AutoHeight: =true
                             Color: =If(btnSoldLeadsDS.DisplayMode=DisplayMode.Disabled,Dashboard.DButtonColor,AllScreensCSS.RColorBlack)
-                            DisabledColor: =RGBA(0, 0, 0, 1)
+                            DisabledColor: =Dashboard.DButtonColor
                             DisplayMode: =If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No'))=0,DisplayMode.Disabled,DisplayMode.Edit)
                             Font: =AllScreensCSS.RFont
                             FontWeight: =FontWeight.Bold
