--- a/QuantumTechnicianApp/Src/AppProcessFlowScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/AppProcessFlowScreen.fx.yaml
@@ -306,14 +306,14 @@ AppProcessFlowScreen As screen:
                     Y: =lblsubstep4.Y+lblsubstep4.Height
                     ZIndex: =7
 
-    grpMenuCS_5 As group:
+    grpMenuAPFS As group:
         Height: =5
         Width: =5
         X: =40
         Y: =80
         ZIndex: =5
 
-        ctnBackgroundMenuCS_5 As groupContainer.manualLayoutContainer:
+        ctnBackgroundMenuAPFS As groupContainer.manualLayoutContainer:
             Fill: =RGBA(0, 0.19, 0.19, 0.19)
             Height: =Parent.Height-ctnHeaderDS.Height
             Visible: =varshowMenu
@@ -321,11 +321,11 @@ AppProcessFlowScreen As screen:
             Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
             ZIndex: =2
 
-        "glryMenuCS_5 As gallery.'BrowseLayout_Vertical_OneTextOneImageVariant_ver4.0'":
+        "glryMenuAPFS As gallery.'BrowseLayout_Vertical_OneTextOneImageVariant_ver4.0'":
             BorderColor: =RGBA(255, 255, 255, 1)
             BorderThickness: =1
             Fill: =RGBA(237, 237, 237, 1)
-            Height: =1.01*(CountRows(glryMenuCS_5.AllItems)*(glryMenuCS_5.TemplateHeight))
+            Height: =1.01*(CountRows(glryMenuAPFS.AllItems)*(glryMenuAPFS.TemplateHeight))
             Items: =Menu
             Layout: =Layout.Vertical
             ShowScrollbar: =false
@@ -336,14 +336,14 @@ AppProcessFlowScreen As screen:
             Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
             ZIndex: =3
 
-            ctnMenuCS_5 As groupContainer.manualLayoutContainer:
+            ctnMenuAPFS As groupContainer.manualLayoutContainer:
                 DropShadow: =DropShadow.ExtraBold
                 Fill: =RGBA(255, 255, 255, 1)
                 Height: =80
                 Width: =Parent.Width/1.02
                 ZIndex: =8
 
-                lblMenuCS_5 As label:
+                lblMenuAPFS As label:
                     AutoHeight: =true
                     Color: =AllScreensCSS.RColorBlack
                     Height: =24
@@ -353,12 +353,12 @@ AppProcessFlowScreen As screen:
                     PaddingTop: =0
                     Size: =If(Parent.Width<500,10,12)
                     Text: =ThisItem.Title
-                    Width: =Parent.Width-iconMenuCS_5.Width-lineIndicatorCS_5.Width
-                    X: =iconMenuCS_5.Width+iconMenuCS_5.X+10
+                    Width: =Parent.Width-iconMenuAPFS.Width-lineIndicatorAPFS.Width
+                    X: =iconMenuAPFS.Width+iconMenuAPFS.X+10
                     Y: =25
                     ZIndex: =1
 
-                iconMenuCS_5 As icon.Add:
+                iconMenuAPFS As icon.Add:
                     Color: =AllScreensCSS.RColorBlack
                     Height: =Parent.Height/4.5
                     Icon: =ThisItem.icon
@@ -367,7 +367,7 @@ AppProcessFlowScreen As screen:
                     Y: =25
                     ZIndex: =3
 
-                btnMenuCS_5 As button:
+                btnMenuAPFS As button:
                     Fill: =RGBA(0, 0, 0, 0)
                     Height: =80
                     HoverFill: =
@@ -380,7 +380,7 @@ AppProcessFlowScreen As screen:
                     Width: =Parent.Width
                     ZIndex: =4
 
-                lineIndicatorCS_5 As rectangle:
+                lineIndicatorAPFS As rectangle:
                     BorderColor: =RGBA(255, 0, 0, 1)
                     BorderThickness: =5
                     Fill: =RGBA(255, 0, 0, 1)
