--- a/QuantumTechnicianApp/Src/InstructionsScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/InstructionsScreen.fx.yaml
@@ -9,7 +9,7 @@ InstructionsScreen As screen:
             {Step: "5. Click on the Info icon beside the App name, then click on the Favorite icon. The App will now be saved in Favorites"}
         );
 
-    ctnMainCS_4 As groupContainer.verticalAutoLayoutContainer:
+    ctnMainLIS As groupContainer.verticalAutoLayoutContainer:
         Fill: =RGBA(237, 237, 237, 1)
         Height: =Parent.Height
         LayoutAlignItems: =LayoutAlignItems.Stretch
@@ -22,7 +22,7 @@ InstructionsScreen As screen:
         Width: =Parent.Width
         ZIndex: =1
 
-        ctnHeaderCS_4 As groupContainer.horizontalAutoLayoutContainer:
+        ctnHeaderLIS As groupContainer.horizontalAutoLayoutContainer:
             AlignInContainer: =AlignInContainer.SetByContainer
             Fill: =RGBA(255, 255, 255, 1)
             FillPortions: =0
@@ -33,7 +33,7 @@ InstructionsScreen As screen:
             Width: =Parent.Width
             ZIndex: =1
 
-            IconMenuCS_4 As icon.Hamburger:
+            IconMenuLIS As icon.Hamburger:
                 Color: =AllScreensCSS.RColorBlack
                 Height: =Parent.Height
                 Icon: =Icon.Hamburger
@@ -45,7 +45,7 @@ InstructionsScreen As screen:
                 Y: =11
                 ZIndex: =1
 
-            imgSchindlerLogoCS_4 As image:
+            imgSchindlerLogoLIS As image:
                 DisplayMode: =DisplayMode.View
                 Fill: =RGBA(255, 255, 255, 1)
                 Height: =Parent.Height
@@ -58,8 +58,7 @@ InstructionsScreen As screen:
                 X: =0.00
                 ZIndex: =2
 
-            iconBackCS_4 As icon.BackArrow:
-                AlignInContainer: =AlignInContainer.Center
+            iconBackLIS As icon.BackArrow:
                 Color: =AllScreensCSS.RColorBlack
                 Height: =Parent.Height/2
                 Icon: =Icon.ChevronLeft
@@ -78,7 +77,7 @@ InstructionsScreen As screen:
                 Y: =11
                 ZIndex: =3
 
-            lblHeaderCS_4 As label:
+            lblHeaderLIS As label:
                 DisplayMode: =DisplayMode.View
                 Font: =AllScreensCSS.RFont
                 FontWeight: =FontWeight.Bold
@@ -91,12 +90,11 @@ InstructionsScreen As screen:
                     =//21.36
                     If(Parent.Width<500,14,Parent.Width>500,20)
                 Text: ="Technician Lead Generation"
-                Width: =Parent.Width-imgSchindlerLogoCS_4.Width-IconMenuCS_4.Width-btnUsernameCS_4.Width-50
+                Width: =Parent.Width-imgSchindlerLogoLIS.Width-IconMenuLIS.Width-btnUsernameLIS.Width-50
                 X: =96.12
                 ZIndex: =4
 
-            btnUsernameCS_4 As button:
-                AlignInContainer: =AlignInContainer.Center
+            btnUsernameLIS As button:
                 BorderColor: =AllScreensCSS.RActiveColor
                 Color: =AllScreensCSS.RColorBlack
                 DisabledBorderColor: =RGBA(255, 0, 0, 1)
@@ -120,7 +118,8 @@ InstructionsScreen As screen:
                 Width: =If(Parent.Width<500,Parent.Height/1.8,Parent.Height/1.6)
                 ZIndex: =6
 
-        ctnLeadsDetailsCS_4 As groupContainer.manualLayoutContainer:
+        ctnLeadsDetailsLIS As groupContainer.manualLayoutContainer:
+            AlignInContainer: =AlignInContainer.SetByContainer
             BorderColor: =RGBA(219, 219, 219, 1)
             BorderThickness: =2
             Fill: =RGBA(255, 255, 255, 1)
@@ -140,7 +139,7 @@ InstructionsScreen As screen:
             Y: =85
             ZIndex: =2
 
-            Label1_3 As label:
+            lblLIS As label:
                 Color: =AllScreensCSS.RColorWhite
                 Fill: =AllScreensCSS.RActiveColor
                 Font: =AllScreensCSS.RFont
@@ -152,11 +151,11 @@ InstructionsScreen As screen:
                 Width: =Parent.Width
                 ZIndex: =1
 
-        ctnMiddleCS_4 As groupContainer.manualLayoutContainer:
+        ctnMiddleLIS As groupContainer.manualLayoutContainer:
             AlignInContainer: =AlignInContainer.SetByContainer
             Fill: =RGBA(255, 255, 255, 1)
             FillPortions: =0
-            Height: =Parent.Height-ctnHeaderCS_4.Height-ctnLeadsDetailsCS_4.Height-30
+            Height: =Parent.Height-ctnHeaderLIS.Height-ctnLeadsDetailsLIS.Height-30
             LayoutMinHeight: =100
             LayoutMinWidth: =250
             PaddingLeft: =5
@@ -165,7 +164,7 @@ InstructionsScreen As screen:
             Y: =180
             ZIndex: =3
 
-            "Gallery1_1 As gallery.'BrowseLayout_Flexible_SocialFeed_ver5.0'":
+            "glryLIS As gallery.'BrowseLayout_Flexible_SocialFeed_ver5.0'":
                 DelayItemLoading: =true
                 Fill: =RGBA(255, 255, 255, 1)
                 Height: =Parent.Height-5
@@ -178,7 +177,7 @@ InstructionsScreen As screen:
                 Y: =5
                 ZIndex: =1
 
-                Title1_1 As label:
+                lblStepLIS As label:
                     Align: =Align.Justify
                     AutoHeight: =true
                     Color: =RGBA(169,169,169, 1)
@@ -197,14 +196,14 @@ InstructionsScreen As screen:
                     Y: =10
                     ZIndex: =2
 
-    grpMenuCS_4 As group:
+    grpMenuLIS As group:
         Height: =5
         Width: =5
         X: =40
         Y: =80
         ZIndex: =5
 
-        ctnBackgroundMenuCS_4 As groupContainer.manualLayoutContainer:
+        ctnBackgroundMenuLIS As groupContainer.manualLayoutContainer:
             Fill: =RGBA(0, 0.19, 0.19, 0.19)
             Height: =Parent.Height-ctnHeaderDS.Height
             Visible: =varshowMenu
@@ -212,11 +211,11 @@ InstructionsScreen As screen:
             Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
             ZIndex: =2
 
-        "glryMenuCS_4 As gallery.'BrowseLayout_Vertical_OneTextOneImageVariant_ver4.0'":
+        "glryMenuLIS As gallery.'BrowseLayout_Vertical_OneTextOneImageVariant_ver4.0'":
             BorderColor: =RGBA(255, 255, 255, 1)
             BorderThickness: =1
             Fill: =RGBA(237, 237, 237, 1)
-            Height: =1.01*(CountRows(glryMenuCS_4.AllItems)*(glryMenuCS_4.TemplateHeight))
+            Height: =1.01*(CountRows(glryMenuLIS.AllItems)*(glryMenuLIS.TemplateHeight))
             Items: =Menu
             Layout: =Layout.Vertical
             ShowScrollbar: =false
@@ -227,14 +226,14 @@ InstructionsScreen As screen:
             Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
             ZIndex: =3
 
-            ctnMenuCS_4 As groupContainer.manualLayoutContainer:
+            ctnMenuLIS As groupContainer.manualLayoutContainer:
                 DropShadow: =DropShadow.ExtraBold
                 Fill: =RGBA(255, 255, 255, 1)
                 Height: =80
                 Width: =Parent.Width/1.02
                 ZIndex: =8
 
-                lblMenuCS_4 As label:
+                lblMenuLIS As label:
                     AutoHeight: =true
                     Color: =AllScreensCSS.RColorBlack
                     Height: =24
@@ -244,12 +243,12 @@ InstructionsScreen As screen:
                     PaddingTop: =0
                     Size: =If(Parent.Width<500,10,12)
                     Text: =ThisItem.Title
-                    Width: =Parent.Width-iconMenuCS_4.Width-lineIndicatorCS_4.Width
-                    X: =iconMenuCS_4.Width+iconMenuCS_4.X+10
+                    Width: =Parent.Width-iconMenuLIS.Width-lineIndicatorLIS.Width
+                    X: =iconMenuLIS.Width+iconMenuLIS.X+10
                     Y: =25
                     ZIndex: =1
 
-                iconMenuCS_4 As icon.Add:
+                iconMenuLIS As icon.Add:
                     Color: =AllScreensCSS.RColorBlack
                     Height: =Parent.Height/4.5
                     Icon: =ThisItem.icon
@@ -258,7 +257,7 @@ InstructionsScreen As screen:
                     Y: =25
                     ZIndex: =3
 
-                btnMenuCS_4 As button:
+                btnMenuLIS As button:
                     Fill: =RGBA(0, 0, 0, 0)
                     Height: =80
                     HoverFill: =
@@ -271,7 +270,7 @@ InstructionsScreen As screen:
                     Width: =Parent.Width
                     ZIndex: =4
 
-                lineIndicatorCS_4 As rectangle:
+                lineIndicatorLIS As rectangle:
                     BorderColor: =RGBA(255, 0, 0, 1)
                     BorderThickness: =5
                     Fill: =RGBA(255, 0, 0, 1)
